# SyphonC4D

./: .gitignore  README.md
R13.061/plugins/SyphonR13/: Makefile.am
R13.061/plugins/SyphonR13/SyphonR13.xcodeproj/: project.pbxproj
R13.061/plugins/SyphonR13/SyphonR13.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
R13.061/plugins/SyphonR13/SyphonR13.xcodeproj/project.xcworkspace/xcshareddata/: Blendy360Cam.xccheckout  Blendy360CamR13.xccheckout  SyphonR13.xccheckout
R13.061/plugins/SyphonR13/SyphonR13.xcodeproj/project.xcworkspace/xcuserdata/Roger.xcuserdatad/: UserInterfaceState.xcuserstate
R13.061/plugins/SyphonR13/SyphonR13.xcodeproj/xcuserdata/Roger.xcuserdatad/xcschemes/: SyphonR13.xcscheme  xcschememanagement.plist
R15.064/plugins/SyphonR15/: projectsettings.props
R15.064/plugins/SyphonR15/SyphonR15.xcodeproj/: project.pbxproj
R15.064/plugins/SyphonR15/SyphonR15.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
R15.064/plugins/SyphonR15/SyphonR15.xcodeproj/project.xcworkspace/xcshareddata/: Blendy360CamR15.xccheckout  SyphonR15.xccheckout
R15.064/plugins/SyphonR15/SyphonR15.xcodeproj/project.xcworkspace/xcuserdata/Roger.xcuserdatad/: UserInterfaceState.xcuserstate
R15.064/plugins/SyphonR15/SyphonR15.xcodeproj/xcuserdata/Roger.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
R15.064/plugins/SyphonR15/SyphonR15.xcodeproj/xcuserdata/Roger.xcuserdatad/xcschemes/: cinema4dsdk.xcscheme  xcschememanagement.plist
R16.027/plugins/SyphonR16/: projectsettings.props
R16.027/plugins/SyphonR16/SyphonR16.xcodeproj/: project.pbxproj
R16.027/plugins/SyphonR16/SyphonR16.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
R16.027/plugins/SyphonR16/SyphonR16.xcodeproj/project.xcworkspace/xcshareddata/: Blendy360CamR16.xccheckout  SyphonR16.xccheckout
R16.027/plugins/SyphonR16/SyphonR16.xcodeproj/project.xcworkspace/xcuserdata/Roger.xcuserdatad/: UserInterfaceState.xcuserstate
R16.027/plugins/SyphonR16/res/description/: SyphonPlugin.h
R16.027/plugins/SyphonR16/source/: SyphonVP.cpp  install.sh  main.cpp  main.h  r13.h
R20/: gen_R20.055.sh  gen_R21.016.sh  gen_R23.008.sh  install_R20.055.sh  install_R21.016.sh  install_R23.008.sh
R20.055/: gen.sh
R20.055/SyphonR20/res/strings_us/description/: SyphonPlugin.str
R20.055/SyphonR20/source/Syphon/src/: SyphonC4DServer.mm
R20/SyphonR20/: syphonr20.xlib
R20/SyphonR20/project/syphonr20.xcodeproj/: project.pbxproj
R20/SyphonR20/project/syphonr20.xcodeproj/xcshareddata/xcschemes/: syphonr20.xcscheme
R20/SyphonR20/res/: c4d_symbols.h
R20/SyphonR20/source/: SyphonVP.cpp  install.sh  main.h
R20/SyphonR21/: syphonr21.xlib
R20/SyphonR21/project/: projectdefinition.txt
R20/SyphonR21/project/syphonr21.xcodeproj/: project.pbxproj
R20/SyphonR21/project/syphonr21.xcodeproj/xcshareddata/xcschemes/: syphonr21.xcscheme
R20/SyphonR21/res/description/: SyphonPlugin.res
R20/SyphonR21/source/: SyphonVP.cpp  main.cpp
R20/SyphonR21/source/Syphon/src/: SyphonC4DServer.mm
R20/SyphonR23/: syphonr23.xlib
R20/SyphonR23/project/syphonr23.xcodeproj/: project.pbxproj
R20/SyphonR23/project/syphonr23.xcodeproj/xcshareddata/xcschemes/: syphonr23.xcscheme
R20/SyphonR23/res/strings_us/: c4d_strings.str
R20/SyphonR23/source/: SyphonVP.cpp  main.cpp  main.h
R20/SyphonR23/source/Syphon/src/: SyphonC4DServer.h
(+16 files in other folders)
